UserMvcController is almost finished. Also I add two additional checks in verifyAuthentication method in AuthenticationHelper, HomeView.html is improved

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,3 +10,4 @@ user.label.isBlocked=Is Blocked
 user.label.profilePhoto=photo
 user.label.position=Position
 navigation.home=Home
+my.profile=My Profile
