--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,5 +9,17 @@ user.label.email=Email
 user.label.isBlocked=Is Blocked
 user.label.profilePhoto=photo
 user.label.position=Position
+users.usernames=All Users
+users.title.empty=No Users
+users.filter.label=Filter User Options
 navigation.home=Home
 my.profile=My Profile
+
+
+subtitle=Create a new contest
+contest.label.title=Title
+contest.label.category=Category
+contest.label.changePhaseTime= 10:00
+contests.Phase1.label= Contests Phase One
+contests.title.empty=No Contests
+contests.title.label= Contests
