My profile, Contest in P1, Update User adn css files for them

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,6 +20,7 @@ subtitle=Create a new contest
 contest.label.title=Title
 contest.label.category=Category
 contest.label.changePhaseTime= 10:00
+contest.label.changePhase= Duration of phase in hours
 contests.Phase1.label= Contests Phase One
 contests.title.empty=No Contests
 contests.title.label= Contests
