upload photo and participate in contest functionality is almost ready, jury photo rating functionality is half maded, One new dto and 4 new html views

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,7 +16,7 @@ navigation.home=Home
 my.profile=My Profile
 
 
-subtitle=Create a new contest
+subtitle=Create a new photo
 contest.label.title=Title
 contest.label.category=Category
 contest.label.changePhaseTime= 10:00
@@ -24,3 +24,10 @@ contest.label.changePhase= Duration of phase in hours
 contests.Phase1.label= Contests Phase One
 contests.title.empty=No Contests
 contests.title.label= Contests
+
+photo.title.label= Photo Title
+photo.story.label= Photo Story
+photo.upload.label= Photo
+
+rating.score.label= Score
+rating.comment.label= Comment
