--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,6 +17,7 @@ my.profile=My Profile
 
 
 subtitle=Create a new photo
+subtitle1=Create a new rating
 contest.label.title=Title
 contest.label.category=Category
 contest.label.changePhaseTime= 10:00
