The functionality to view all Previous contests and their winners id done. ContestsWithWinnersView.html was created and FinishedContestAntItsWinner.java was created. Small change in me view method to see more things about the user.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,11 +24,18 @@ contest.label.changePhaseTime= 10:00
 contest.label.changePhase= Duration of phase in hours
 contests.Phase1.label= Contests Phase One
 contests.title.empty=No Contests
+contests.all.label= All Contests
 contests.title.label= Contests
+contest.label.phase= Phase
 
+photo.allFirst.label= All Photos On First Place
+photo.all.label = All Photos
 photo.title.label= Photo Title
 photo.story.label= Photo Story
 photo.upload.label= Photo
+photo.label.empty= No Photos
+photo.label.user= Username
+photo.label.createAt= Created At
 
 rating.score.label= Score
 rating.comment.label= Comment
