--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,9 @@ user.label.firstName=First Name
 user.label.lastName=Last Name
 user.label.fullName=Full Name
 user.label.email=Email
+user.label.points=Points
+user.label.role=Role
+user.label.rank=Rank
 user.label.isBlocked=Is Blocked
 user.label.profilePhoto=photo
 user.label.position=Position
