The functionality where you can see all your photos and can see all ratings of each photo is created.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -40,5 +40,8 @@ photo.label.empty= No Photos
 photo.label.user= Username
 photo.label.createAt= Created At
 
+rating.categoryMatch.label= Category Match
+rating.reviewDate.label= Review Date
 rating.score.label= Score
 rating.comment.label= Comment
+rating.label.empty= No Ratings
