--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -44,4 +44,4 @@ rating.categoryMatch.label= Category Match
 rating.reviewDate.label= Review Date
 rating.score.label= Score
 rating.comment.label= Comment
-rating.label.empty= No Ratings
+rating.label.empty= No Ratings Yet
