Small change in insert_data.sql and default photo make

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,6 +20,7 @@ my.profile=My Profile
 
 
 subtitle=Create a new photo
+subtitle2=New contest
 subtitle1=Create a new rating
 contest.label.title=Title
 contest.label.category=Category
